[tool.poetry]
name = "brhni-whereami"
version = "0.1.0"
description = ""
authors = ["Bertrand Reyna-Brainerd <bertbrainerd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"

[tool.poetry.scripts]
fill-contrast = "brhni_whereami.fill_contrast_new_args:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
